Archive2/a4/2e80958d3d97c0/output
main.cpp:18:5: error: call to 'stuff' is ambiguous
    stuff<1,1>("hello", "world");
    ^~~~~~~~~~
main.cpp:5:10: note: candidate function [with x = 1, y = 1]
    void stuff(std::string arg1, std::string arg2)
         ^
main.cpp:11:51: note: candidate function [with x = 1, y = 1]
    typename std::enable_if<(x == y), void>::type stuff(std::string arg1, std::string arg2)
                                                  ^
1 error generated.
